--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,11 +15,17 @@ const { title } = Astro.props;
       content="Previzualizador de los planes ABA CANTV"
     />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body>
+  <body
+    class="md:px-10 px-5 w-screen bg-gradient-to-r from-[#001C3D] from-10% to-[#459DFF] to-90% text-white"
+  >
+    <header class="xl:w-full flex justify-between items-center p-2">
+      <img src="/cantv.png" alt="Logo CANTV" />
+      <h1 class="md:text-4xl text-2xl font-extrabold">Plan Previewer</h1>
+    </header>
     <slot />
   </body>
 </html>
