--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,52 @@
 ---
 import Layout from "../layouts/Layout.astro";
+import Loader from "../components/shared/Loader.astro";
+import Table from "../components/Table.jsx";
+import { getData } from "../libs/querys";
+import CONSTANTS from "../libs/constants";
+
+const searchParams = Astro.url.searchParams;
+const planBase = searchParams.get("plan");
+
+const data = planBase ? await getData(planBase) : [];
 ---
 
 <Layout title="Plan Previewer">
-  <main>
-    <h1>Index</h1>
+  <main class="flex flex-col gap-5 py-5">
+    <section class="flex justify-between">
+      <form class="flex w-44 ms-auto">
+        <select
+          name="plan"
+          id="plan"
+          class="p-1 w-32 bg-white text-slate-700 font-semibold"
+        >
+          <option selected disabled>Select Plan</option>
+
+          {
+            CONSTANTS.PLANS.map((item) => (
+              <option value={item}>{item} Mbps</option>
+            ))
+          }
+        </select>
+        <button
+          id="button"
+          class="bg-[#E85D04] rounded-sm px-2 py-1 font-semibold">Plan</button
+        >
+      </form>
+    </section>
+    <Loader />
+    {
+      data.length > 0 && (
+        <Table client:visible planBase={planBase} data={data} />
+      )
+    }
   </main>
 </Layout>
+
+<script>
+  const loader = document.getElementById("loader");
+  const btn = document.getElementById("button");
+  btn.addEventListener("click", () => {
+    loader.style.display = "block";
+  });
+</script>
