--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props;
   >
     <header class="xl:w-full flex justify-between items-center p-2">
       <img src="/cantv.png" alt="Logo CANTV" />
-      <h1 class="md:text-4xl text-2xl font-extrabold">Plan Previewer</h1>
+      <h1 class="md:text-4xl text-2xl font-extrabold">Plan Migración ABA</h1>
     </header>
     <slot />
   </body>
