--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,7 +56,7 @@ const data = planBase ? await getData(planBase, state) : [];
     <section id="table">
       {
         data.length > 0 && (
-          <Table client:visible planBase={planBase} state={state} data={data} />
+          <Table client:load planBase={planBase} state={state} data={data} />
         )
       }
     </section>
